@@ -4,6 +4,9 @@ Noteworthy changes in version 2.2.7 (unreleased)
   * gpg: New option --no-symkey-cache to disable the passphrase cache
     for symmetrical en- and decryption.
 
+  * gpg: The ERRSIG status now prints the fingerprint if that is part
+    of the signature.
+
 
 Noteworthy changes in version 2.2.6 (2018-04-09)
 ------------------------------------------------
